BigView render DMX channels in steps to reduce lag Fix close button z-index issue

--- a/electron-vite-project/src/index.css
+++ b/electron-vite-project/src/index.css
@@ -151,11 +151,8 @@
     position: absolute;
     right: 10px;
     top: 8px;
+    z-index: 9;
   }
-
-  /* .buttonClose:hover {
-    background-color: var(--colorButtonHover);
-  } */
 
   .buttonClose:hover .xClose {
     background-color: var(--primary);
